# MySecondBrain

./: .gitignore  README.md  pyproject.toml  requirements.txt
fixtures/: hiking-gear.txt  mixed-topics.md  postgres-indexing.md  rust-async.md  sourdough.md  tax-deadlines.md
fixtures/bookmarks/: Bookmarks
kb/: __init__.py  __main__.py  answer.py  config.py  embedding.py  ingest.py  lexical.py  llm.py  query.py  source.py  status.py  store.py  watch.py
tests/: test_answer.py  test_bookmarks.py  test_documents.py  test_lexical.py  test_llm.py  test_model_guard.py  test_query.py  test_rrf.py  test_zeroconfig.py
